--- a/themes/openy_themes/openy_rose/scss/base/_colors.scss
+++ b/themes/openy_themes/openy_rose/scss/base/_colors.scss
@@ -10,9 +10,9 @@ $darker-grey: #333333;
 
 
 $sky-blue: #bfe1f3;
-$light-blue: #00aeef;
+$light-blue: #007ECA;
 $blue: #0089d0;
-$dark-blue: #0060af;
+$dark-blue: #0056A6;
 
 $pink: #c6168d;
 $dark-magenta: #92278f;
