[YMCA-1799] Move field_content to field_ygtc_content

--- a/docroot/themes/custom/ymca/templates/node--blog--camp--full.html.twig
+++ b/docroot/themes/custom/ymca/templates/node--blog--camp--full.html.twig
@@ -85,7 +85,7 @@
       <div class="copy col-sm-7 col-sm-push-5 col-md-9 col-md-push-3">
         <div class="post_display_full">
           <article class="richtext">
-            {{ content.field_content }}
+            {{ content.field_ygtc_content }}
           </article>
         </div>
 
