--- a/docroot/themes/custom/ymca/templates/node--blog--full.html.twig
+++ b/docroot/themes/custom/ymca/templates/node--blog--full.html.twig
@@ -98,7 +98,7 @@
       {% endif %}
         <div class="post_display_full">
           <article class="richtext">
-            {{ content.field_content }}
+            {{ content.field_ygtc_content }}
           </article>
         </div>
 
