--- a/docroot/themes/custom/ymca/templates/node--camp--full.html.twig
+++ b/docroot/themes/custom/ymca/templates/node--camp--full.html.twig
@@ -88,7 +88,7 @@
       </div>
       <div class="col-sm-pull-6 col-md-pull-5 col-md-7 col-sm-6 lead">
         <article class="richtext" id="component_180968">
-          {{ content.field_content }}
+          {{ content.field_ygtc_content }}
         </article>
       </div>
     </div>
