--- a/docroot/themes/custom/ymca/templates/layout/node/node-content.html.twig
+++ b/docroot/themes/custom/ymca/templates/layout/node/node-content.html.twig
@@ -11,11 +11,11 @@
 {% block maincontent %}
   {% if is_front %}
     <section class="row main-promos promos">
-      {{ content.field_content }}
+      {{ content.field_ygtc_content }}
     </section>
   {% else %}
     <article class="richtext">
-      {{ content.field_content }}
+      {{ content.field_ygtc_content }}
     </article>
   {% endif %}
 {% endblock %}
