[YMCA-1799] Fix landing page content output

--- a/docroot/themes/custom/ymca/templates/node/node--landing_page--full.html.twig
+++ b/docroot/themes/custom/ymca/templates/node/node--landing_page--full.html.twig
@@ -94,7 +94,7 @@
           </div>
         {% endif %}
         <div class="content-main-region col-sm-{{ main_col_count }}">
-          {{ content.field_oy_content }}
+          {{ content.field_content }}
         </div>
       </div>
     </div>
