--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/misc/_footer.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/misc/_footer.scss
@@ -13,42 +13,59 @@
   padding-top: 40px;
   padding-bottom: 14px;
   #block-openy-lily-footersocialblock {
-    .field-block-content {
-      ul {
-        li {
-          margin: 0 12px;
-          a {
-            border: 3px solid $blue;
-            border-radius: 50%;
-            width: 46px;
+    ul {
+      li {
+        margin: 0 12px;
+        a {
+          border: 3px solid $blue;
+          border-radius: 50%;
+          width: 46px;
+          display: block;
+          height: 46px;
+          box-sizing: border-box;
+          line-height: 40px;
+          font-size: 26px;
+          padding-top: 40px;
+          position: relative;
+          overflow: hidden;
+          &:before {
+            position: absolute;
+            top: 0;
+            left: 0;
             display: block;
-            height: 46px;
-            box-sizing: border-box;
-            line-height: 40px;
-            font-size: 26px;
-            padding-top: 40px;
-            position: relative;
-            overflow: hidden;
-            &:before {
-              position: absolute;
-              top: 0;
-              left: 0;
-              display: block;
-              width: 100%;
-              text-align: center;
-            }
+            width: 100%;
+            text-align: center;
+          }
+          &.social-icon {
+            display: inline-block;
+            font-family: FontAwesome;
+            text-rendering: auto;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+          }
+          &.icon-facebook:before {
+            content: "\f09a";
+          }
+          &.icon-twitter:before {
+            content: "\f099";
+          }
+          &.icon-youtube:before {
+            content: "\f167";
+          }
+          &.icon-flickr:before {
+            content: "\f16e";
           }
         }
-        @include breakpoint(0 $tablet) {
-          li {
-            margin: 0 5px;
-            a {
-              width: 36px;
-              height: 36px;
-              line-height: 30px;
-              font-size: 20px;
-              padding-top: 30px;
-            }
+      }
+      @include breakpoint(0 $tablet) {
+        li {
+          margin: 0 5px;
+          a {
+            width: 36px;
+            height: 36px;
+            line-height: 30px;
+            font-size: 20px;
+            padding-top: 30px;
           }
         }
       }
@@ -73,17 +90,17 @@
     }
   }
   #block-openy-lily-footercopyrightblock {
-    padding-top: 40px;
+    padding-top: 20px;
     padding-bottom: 10px;
     text-align: center;
     .contextual {
       top: -20px;
     }
-    p {
+    h5, p {
       @include cachet();
       display: inline-block;
       margin: 0;
-      font-size: 13px;
+      font-size: 12px;
       line-height: 20px;
       color: $gray;
       &:first-child {
