OS-1: OpenY Header. Restore the default OpenY colors and white border around the dropdown menu.

--- a/themes/openy_themes/openy_rose/css/colors.css
+++ b/themes/openy_themes/openy_rose/css/colors.css
@@ -42,7 +42,7 @@ a,
 .navbar-default .navbar-toggle:focus,
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:active {
-  background-color: #007ECA; /* Header background (headerbg) */
+  background-color: #0060af; /* Header background (headerbg) */
 }
 .nav.dropdown-menu,
 .viewport .nav-level-2.open > a,
