--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -400,10 +400,6 @@ body {
   text-align: center;
   text-transform: uppercase;
   top: 25px;
-  /*
-  @include breakpoint($screen-tablet) {
-    font-size: 14px;
-  }*/
 }
 .page-head__logo .site-slogan:hover {
   text-decoration: none;
@@ -414,12 +410,6 @@ body {
     left: auto;
     top: 60px;
   }
-}
-.page-head__logo .site-slogan span {
-  /*
-  border-bottom: 1px solid $light-blue;
-  padding: 0 5px 8px 5px;
-  */
 }
 .page-head__search {
   padding-left: 140px;
@@ -506,7 +496,7 @@ body {
 }
 @media (min-width: 48em) {
   .is-camp .page-head__main-menu .navbar-nav > li > a, .page-head__main-menu .navbar-nav > li > a {
-    padding-top: 11px;
+    padding-top: 9px;
   }
 }
 @media (min-width: 62em) {
@@ -738,7 +728,7 @@ body {
 .navbar-default .navbar-toggle:focus,
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:active {
-  background-color: #007ECA;
+  background-color: #0089d0;
   cursor: pointer;
 }
 .navbar-default .navbar-toggle .icon-bar,
@@ -819,7 +809,8 @@ body {
 }
 
 .nav.dropdown-menu {
-  background-color: #0056A6;
+  background-color: #0060af;
+  border: 1px solid #fff;
 }
 
 .nav-home li.dropdown {
@@ -949,7 +940,7 @@ body {
 }
 .sidebar .nav-level-2.open,
 .sidebar .row-level-2 {
-  background-color: #0056A6;
+  background-color: #0060af;
 }
 .sidebar .navbar-nav .open .dropdown-menu > li > a,
 .sidebar .navbar-nav .open .dropdown-menu .dropdown-header {
@@ -1010,7 +1001,8 @@ body {
 }
 @media (min-width: 75em) {
   .viewport .nav-level-2 > a {
-    padding: 10px 25px 10px 25px;
+    padding: 10px 25px 9px 25px;
+    margin: 1px 1px 0 1px;
   }
 }
 .viewport .nav-level-2 > a:hover, .viewport .nav-level-2 > a:focus {
@@ -1018,32 +1010,28 @@ body {
   z-index: 1001;
 }
 .viewport .nav-level-2.open {
-  background-color: #0056A6;
-  /*
-  border-top: 1px solid $light-grey;
-  border-left: 1px solid $light-grey;
-  border-right: 1px solid $light-grey;
-  border-bottom: 1px solid $dark-blue;
+  background-color: #0060af;
+  border-top: 1px solid #ccc;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  border-bottom: 1px solid #0060af;
   margin-top: -1px;
-  */
 }
 .viewport .nav-level-2.open > .dropdown-menu {
-  margin-top: 0px;
-  border: 0;
-  border-radius: 0;
-  box-shadow: none;
+  margin-top: -1px;
 }
 .viewport .nav-level-2.open > a,
 .viewport .nav-level-2.open > a:focus {
   position: relative;
   z-index: 1001;
   padding: 10px 14px 10px 14px;
-  background: #0056A6;
+  background: #0060af;
 }
 @media (min-width: 75em) {
   .viewport .nav-level-2.open > a,
   .viewport .nav-level-2.open > a:focus {
     padding: 10px 25px 10px 25px;
+    margin: 0;
   }
 }
 .viewport .row-level-3,
@@ -1147,11 +1135,11 @@ body {
 }
 .btn.white-blue, .white-blue.button {
   background-color: #fff;
-  color: #007ECA;
-  border: 1px solid #007ECA;
+  color: #00aeef;
+  border: 1px solid #00aeef;
 }
 .btn.white-blue a, .white-blue.button a {
-  color: #007ECA;
+  color: #00aeef;
   text-decoration: none;
 }
 .btn.transparent-blue, .transparent-blue.button {
@@ -1261,13 +1249,13 @@ body {
   background-color: #bfe1f3;
 }
 .styleguide .bg-light-blue {
-  background-color: #007ECA;
+  background-color: #00aeef;
 }
 .styleguide .bg-blue {
   background-color: #0089d0;
 }
 .styleguide .bg-dark-blue {
-  background-color: #0056A6;
+  background-color: #0060af;
 }
 .styleguide .bg-pink {
   background-color: #c6168d;
@@ -1317,7 +1305,7 @@ body {
   clear: both;
 }
 .styleguide .highlight {
-  border-left: 3px solid #0056A6;
+  border-left: 3px solid #0060af;
 }
 .styleguide .fontawesome-icon-list .fa-hover a {
   overflow: hidden;
@@ -1347,7 +1335,7 @@ body {
   vertical-align: -6px;
 }
 .styleguide .underline {
-  border-bottom: 3px solid #0056A6;
+  border-bottom: 3px solid #0060af;
   padding-bottom: 10px;
 }
 
@@ -1799,7 +1787,7 @@ body {
   position: relative;
 }
 .banner--dark-blue {
-  background-color: #0056A6;
+  background-color: #0060af;
 }
 .banner--dark-green {
   background-color: #006b6b;
@@ -2850,7 +2838,7 @@ body {
   font-family: "Cachet W01 Book", Verdana, sans-serif;
   background: #fff;
   border-radius: 4px;
-  color: #007ECA;
+  color: #00aeef;
   display: inline-block;
   font-size: 14px;
   height: 30px;
@@ -2957,7 +2945,7 @@ body {
 }
 .sub-category-classes-view .activity-group .activity-group-slider .slick-arrow {
   background: none;
-  color: #007ECA;
+  color: #00aeef;
   padding: 0;
   z-index: 1;
   height: 40px;
@@ -2965,7 +2953,7 @@ body {
   margin-top: -7px;
 }
 .sub-category-classes-view .activity-group .activity-group-slider .slick-arrow:before {
-  color: #007ECA;
+  color: #00aeef;
 }
 @media (min-width: 48em) {
   .sub-category-classes-view .activity-group .activity-group-slider .slick-arrow {
@@ -3321,7 +3309,7 @@ body {
 }
 .branch__updates_queue .slick-arrow {
   background: none;
-  color: #007ECA;
+  color: #00aeef;
   padding: 0;
   z-index: 1;
   height: 40px;
@@ -3613,7 +3601,7 @@ html.js .branch__updates_queue__button {
   font-family: "Cachet W01 Book", Verdana, sans-serif;
   background: #fff;
   border-radius: 4px;
-  color: #007ECA;
+  color: #00aeef;
   display: inline-block;
   font-size: 14px;
   height: 30px;
@@ -3745,7 +3733,7 @@ html.js .branch__updates_queue__button {
 }
 .branch-sessions-group .branch-sessions-group-slider .slick-arrow {
   background: none;
-  color: #007ECA;
+  color: #00aeef;
   padding: 0;
   z-index: 1;
   height: 40px;
@@ -5179,7 +5167,7 @@ html.js .branch__updates_queue__button {
   font-family: "Cachet W01 Book", Verdana, sans-serif;
   background: #fff;
   border-radius: 4px;
-  color: #007ECA;
+  color: #00aeef;
   display: inline-block;
   font-size: 12px;
   height: 30px;
@@ -5272,7 +5260,7 @@ html.js .branch__updates_queue__button {
 }
 #schedules-search-listing-wrapper .results .schedule-sessions-group-slider .slick-arrow {
   background: none;
-  color: #007ECA;
+  color: #00aeef;
   padding: 0;
   z-index: 1;
   height: 40px;
@@ -5280,7 +5268,7 @@ html.js .branch__updates_queue__button {
   margin-top: -7px;
 }
 #schedules-search-listing-wrapper .results .schedule-sessions-group-slider .slick-arrow:before {
-  color: #007ECA;
+  color: #00aeef;
 }
 @media (min-width: 48em) {
   #schedules-search-listing-wrapper .results .schedule-sessions-group-slider .slick-arrow {
@@ -5405,13 +5393,13 @@ html.js .branch__updates_queue__button {
   margin: 0 10px 10px 0;
 }
 #schedules-search-listing-wrapper .branch-hours-wrapper .row-eq-height .slick-arrow, #schedules-search-listing-wrapper .branch-hours-wrapper .modal-body .fieldset-wrapper > div .slick-arrow, .modal-body #schedules-search-listing-wrapper .branch-hours-wrapper .fieldset-wrapper > div .slick-arrow {
-  color: #007ECA;
+  color: #00aeef;
 }
 #schedules-search-listing-wrapper .branch-hours-wrapper .row-eq-height .slick-arrow:hover:before, #schedules-search-listing-wrapper .branch-hours-wrapper .modal-body .fieldset-wrapper > div .slick-arrow:hover:before, .modal-body #schedules-search-listing-wrapper .branch-hours-wrapper .fieldset-wrapper > div .slick-arrow:hover:before {
-  color: #007ECA;
+  color: #00aeef;
 }
 #schedules-search-listing-wrapper .branch-hours-wrapper .row-eq-height .slick-arrow:before, #schedules-search-listing-wrapper .branch-hours-wrapper .modal-body .fieldset-wrapper > div .slick-arrow:before, .modal-body #schedules-search-listing-wrapper .branch-hours-wrapper .fieldset-wrapper > div .slick-arrow:before {
-  color: #007ECA;
+  color: #00aeef;
 }
 #schedules-search-listing-wrapper .branch-hours-wrapper .row-eq-height .slick-next, #schedules-search-listing-wrapper .branch-hours-wrapper .modal-body .fieldset-wrapper > div .slick-next, .modal-body #schedules-search-listing-wrapper .branch-hours-wrapper .fieldset-wrapper > div .slick-next,
 #schedules-search-listing-wrapper .branch-hours-wrapper .row-eq-height .slick-prev,
@@ -6362,7 +6350,7 @@ a[href="#step2"] {
 }
 .camp-menu-wrapper {
   position: relative;
-  background-color: #0056A6;
+  background-color: #0060af;
 }
 .camp-menu-wrapper .columns-gradient {
   position: absolute;
@@ -6520,7 +6508,7 @@ a[href="#step2"] {
 
 .openy-page-tabs .is-active {
   color: #fff;
-  background: #007ECA;
+  background: #00aeef;
 }
 .openy-page-tabs > ul {
   display: table;
@@ -6536,7 +6524,7 @@ a[href="#step2"] {
   line-height: 17px;
   text-align: center;
   font-weight: 500;
-  border: solid 1px #007ECA;
+  border: solid 1px #00aeef;
   border-right: 0;
 }
 @media (max-width: 480px) {
@@ -6545,7 +6533,7 @@ a[href="#step2"] {
   }
 }
 .openy-page-tabs > ul li:last-child {
-  border-right: solid 1px #007ECA;
+  border-right: solid 1px #00aeef;
 }
 .openy-page-tabs > ul li a {
   font-family: "Cachet W01 Book", Verdana, sans-serif;
@@ -7565,7 +7553,7 @@ article .node--view-mode-flexible-content h2 a span {
 }
 
 .paragraph--type--lto {
-  background-color: #0056A6;
+  background-color: #0060af;
   padding: 20px 0;
   margin: -20px 0 40px;
 }
