--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
@@ -7115,6 +7115,34 @@ article .node--view-mode-flexible-content h2 a span {
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Cachet';
+  src: url("../fonts/cachet/cachet-book.eot");
+  src: url("../fonts/cachet/cachet-book.eot?#iefix") format("embedded-opentype"), url("../fonts/cachet/cachet-book.woff2") format("woff2"), url("../fonts/cachet/cachet-book.woff") format("woff"), url("../fonts/cachet/cachet-book.svg#cachet-book") format("svg"), url("../fonts/cachet/cachet-book.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Cachet Bold';
+  src: url("../fonts/cachet/cachet-bold.eot");
+  src: url("../fonts/cachet/cachet-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/cachet/cachet-bold.woff2") format("woff2"), url("../fonts/cachet/cachet-bold.woff") format("woff"), url("../fonts/cachet/cachet-bold.svg#cachet-bold") format("svg"), url("../fonts/cachet/cachet-bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Cachet Medium';
+  src: url("../fonts/cachet/cachet-medium.eot");
+  src: url("../fonts/cachet/cachet-medium.eot?#iefix") format("embedded-opentype"), url("../fonts/cachet/cachet-medium.woff2") format("woff2"), url("../fonts/cachet/cachet-medium.woff") format("woff"), url("../fonts/cachet/cachet-medium.svg#cachet-medium") format("svg"), url("../fonts/cachet/cachet-medium.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'icomoon';
+  src: url("../fonts/icomoon.eot?fmn4yo");
+  src: url("../fonts/icomoon.eot?#iefixfmn4yo") format("embedded-opentype"), url("../fonts/icomoon.woff?fmn4yo") format("woff"), url("../fonts/icomoon.ttf?fmn4yo") format("truetype"), url("../fonts/icomoon.svg?fmn4yo#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 body {
   -webkit-font-smoothing: antialiased;
   font-family: Verdana, Geneva, sans-serif;
@@ -13271,6 +13299,452 @@ input[type="checkbox"]:focus {
 .focusable.skip-link:focus {
   position: fixed !important;
   top: 0;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-angle-double-left:before {
+  content: "\f100";
+}
+
+.icon-angle-double-right:before {
+  content: "\f101";
+}
+
+.icon-angle-left:before {
+  content: "\f104";
+}
+
+.icon-angle-right:before {
+  content: "\f105";
+}
+
+.blog-search-container {
+  background: #b3b3b3;
+  color: #fff;
+  padding: 5px 10px 10px;
+}
+
+.copy ul.search-results-ul {
+  padding-left: 0;
+}
+
+.panel-blog-subnav-menus {
+  padding: 12px;
+  background: #e0e0e0;
+}
+.panel-blog-subnav-menus .sitemap_component > ul > li > a, .panel-blog-subnav-menus .sitemap_component > ul > li:before {
+  display: none;
+}
+
+.dropdown.categories .categories > a {
+  display: none;
+}
+
+.panel-blog-subnav h3 {
+  font-size: 18px;
+  margin-top: 0;
+  margin-bottom: 5px;
+  text-transform: uppercase;
+}
+.panel-blog-subnav h3 > i {
+  margin-right: 8px;
+}
+.panel-blog-subnav h3 > i:before {
+  position: relative;
+  vertical-align: baseline;
+  top: 1px;
+}
+.panel-blog-subnav h3 > i.glyphicon-tag:before {
+  top: 3px;
+}
+.panel-blog-subnav ul {
+  padding-left: 3px;
+  padding-bottom: 25px;
+  margin-bottom: 0;
+}
+.panel-blog-subnav ul.blog_years_list {
+  padding-bottom: 7px;
+}
+.panel-blog-subnav ul.blog_months_list {
+  padding-bottom: 0;
+}
+.panel-blog-subnav li {
+  list-style: none;
+  line-height: 1.6em;
+  font-family: 'Cachet',Arial,sans-serif;
+  font-weight: 800;
+  color: #0089d0;
+}
+.panel-blog-subnav li:before {
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  font-family: 'Glyphicons Halflings';
+  -webkit-font-smoothing: antialiased;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  -moz-osx-font-smoothing: grayscale;
+  width: 1em;
+  content: "\e080";
+  color: #b8b8b8;
+  margin-right: 5px;
+  font-size: 12px;
+}
+.panel-blog-subnav li > a {
+  font-family: 'Cachet',Arial,sans-serif;
+  font-weight: 800;
+  color: #0089d0;
+}
+.panel-blog-subnav li > a.active {
+  color: #7d8186;
+  font-weight: normal;
+}
+.panel-blog-subnav li > a.active:hover {
+  text-decoration: none;
+  cursor: default;
+}
+.panel-blog-subnav li.blog_months_container_li {
+  display: none;
+}
+.panel-blog-subnav li.blog_year_li:before, .panel-blog-subnav li.blog_months_container_li:before {
+  display: none;
+  content: '';
+}
+.panel-blog-subnav li.blog_year_li i {
+  margin-right: 8px;
+}
+.panel-blog-subnav li.blog_year_li i:before {
+  position: relative;
+  vertical-align: baseline;
+  top: 1px;
+}
+.panel-blog-subnav .blog_month_link {
+  font-weight: normal;
+}
+
+.rss-feed-button {
+  margin-top: 18px;
+  margin-bottom: 20px;
+}
+.rss-feed-button > a {
+  width: 100%;
+}
+.rss-feed-button.rss-feed-mobile {
+  text-align: center;
+}
+.rss-feed-button.rss-feed-mobile > a {
+  max-width: 300px;
+}
+.rss-feed-button .icon-rss {
+  margin-right: 7px;
+  vertical-align: baseline;
+  top: 1px;
+  position: relative;
+}
+
+.blog_month_link.active {
+  color: #7d8186;
+}
+.blog_month_link.active:hover {
+  text-decoration: none;
+  cursor: default;
+}
+
+.post_img_auth_title_section_date_time {
+  padding-left: 0;
+}
+
+.post-title a {
+  color: #414141;
+  font-size: 24px;
+  font-family: "Cachet",Arial,sans-serif;
+  font-weight: bold;
+  -webkit-transition: color .2s ease-out;
+  -moz-transition: color .2s ease-out;
+  -ms-transition: color .2s ease-out;
+  transition: color .2s ease-out;
+}
+.post-title a:hover {
+  color: #0089d0;
+}
+.post-title a:after {
+  content: "";
+  display: none;
+}
+
+.post-excerpt .copy .richtext {
+  margin-top: 0;
+}
+.post-excerpt .read-more {
+  color: #0089d0;
+  font-size: 16px;
+  font-family: "Cachet",Arial,sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  -webkit-transition: color .2s ease-out;
+  -moz-transition: color .2s ease-out;
+  -ms-transition: color .2s ease-out;
+  transition: color .2s ease-out;
+}
+.post-excerpt .read-more:hover {
+  text-decoration: none;
+  color: #006ea7;
+}
+.post-excerpt .read-more:after {
+  text-transform: none;
+  position: relative;
+  top: 1px;
+  margin-left: 10px;
+  content: 'o';
+  vertical-align: baseline;
+  font-size: 20px;
+  font-family: 'YMCA';
+}
+
+.post-excerpt-image {
+  float: left;
+  padding-top: 5px;
+}
+.post-excerpt-image img {
+  margin-right: 20px;
+  padding-bottom: 20px;
+}
+
+.post-excerpt-content h2 {
+  margin-top: 0 !important;
+}
+
+.post-excerpt {
+  list-style: none;
+}
+
+.post-excerpt-content .post-citation, .posted_on_author {
+  font-size: 12px;
+}
+
+.author {
+  font-weight: bold;
+}
+
+.post-excerpt-content {
+  padding-left: 205px;
+  clear: none;
+  margin-top: 0;
+  font-size: 16px;
+}
+.post-excerpt-content .richtext {
+  clear: none;
+  margin-top: 0;
+  font-size: 16px;
+}
+.post-excerpt-content .richtext:after {
+  clear: none;
+  margin-top: 0;
+  font-size: 16px;
+}
+
+.page_news__events .post-excerpt-image, #excerpt-source .post-excerpt-image {
+  display: none;
+}
+
+.page_news__events .post-excerpt-content {
+  padding-left: 0;
+}
+
+#excerpt-source .post-excerpt-content {
+  padding-left: 0;
+}
+#excerpt-source .post-citation {
+  display: none;
+}
+#excerpt-source .post-excerpt h2 {
+  text-transform: none;
+  margin-bottom: 10px;
+}
+#excerpt-source .post-excerpt h2 a {
+  text-transform: none;
+  margin-bottom: 10px;
+}
+#excerpt-source .post-excerpt p {
+  font-size: 14px;
+}
+
+.back-to-blog {
+  margin-bottom: 15px;
+}
+.back-to-blog a {
+  font-family: Cachet;
+  text-transform: uppercase;
+}
+.back-to-blog a:hover {
+  font-family: Cachet;
+  text-decoration: none;
+}
+.back-to-blog .glyphicon {
+  margin-right: 5px;
+}
+.back-to-blog .glyphicon:before {
+  vertical-align: baseline;
+  position: relative;
+  top: 1px;
+  left: 0;
+}
+
+.blog-pagination {
+  position: relative;
+  margin-top: 45px;
+  margin-bottom: 125px;
+}
+
+.blog-pagination-btn {
+  color: #fff;
+  background: #b4b4b4;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  vertical-align: middle;
+  text-align: center;
+  font-size: 18px;
+  -webkit-transition: background-color .2s ease-out;
+  -moz-transition: background-color .2s ease-out;
+  -ms-transition: background-color .2s ease-out;
+  transition: background-color .2s ease-out;
+}
+.blog-pagination-btn:hover {
+  color: #fff;
+  background: #949494;
+  text-decoration: none;
+}
+.blog-pagination-btn i {
+  vertical-align: middle;
+}
+
+.blog-pages {
+  width: 100%;
+  text-align: center;
+}
+
+.blog-pages-content {
+  display: inline-block;
+  margin: 5px 0 0 -15px;
+  background: #FFF;
+  position: relative;
+  z-index: 5;
+  padding: 0 15px;
+}
+.blog-pages-content .button-disabled {
+  font-weight: bold;
+  color: #b4b4b4;
+}
+.blog-pages-content .button-disabled:hover {
+  color: #b4b4b4;
+  text-decoration: none;
+  cursor: default;
+}
+
+.blog-pages:before {
+  content: "";
+  border-top: 1px solid #b4b4b4;
+  width: 100%;
+  display: block;
+  top: 14px;
+  position: absolute;
+}
+
+.blog-prev-pages {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: #FFF;
+  padding-right: 5px;
+  z-index: 5;
+}
+
+.blog-next-pages {
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: #FFF;
+  padding-left: 5px;
+}
+
+.blog-mobile-archive {
+  display: none;
+  padding: 10px;
+  font-family: Cachet;
+  font-weight: bold;
+}
+.blog-mobile-archive a {
+  padding: 5px 50px 5px 0;
+  display: inline-block;
+}
+
+.abe_blog_post_list_pager .blog-pages-content {
+  margin-left: -100px;
+}
+
+.full_blog_post_meta {
+  padding: 20px 0 10px;
+}
+
+@media (max-width: 480px) {
+  .post-title a {
+    font-size: 20px;
+  }
+
+  .post-excerpt-content {
+    font-size: 14px;
+  }
+  .post-excerpt-content .richtext {
+    font-size: 14px;
+  }
+  .post-excerpt-content .richtext:after {
+    font-size: 14px;
+  }
+
+  .post-excerpt-image img {
+    max-width: 70px;
+    margin-right: 10px;
+    padding-bottom: 12px;
+  }
+
+  .post-excerpt-content {
+    padding-left: 0;
+  }
+}
+@media (max-width: 767px) {
+  .blog-mobile-archive {
+    display: block;
+  }
+}
+.addthis_32x32_style {
+  margin-top: 15px !important;
+}
+
+/* Give page */
+.path-give .hero-image .button {
+  border-radius: 4px;
+}
+.path-give .video-container h3 {
+  color: #333333;
+}
+.path-give .content-cards .info .button {
+  border-radius: 4px;
+  margin-top: 14px;
+  font-size: 10px;
+  padding: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
