--- a/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-village-teaser.html.twig
+++ b/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-village-teaser.html.twig
@@ -9,9 +9,6 @@
 <a href="{{ cabin_url }}">
   <div class="inner">
     <img src="{{ image }}" alt="{{ title }}" />
-    <div class="info">
-      <span class="capacity"><i class="fa fa-user"></i>{{ capacity }}</span>
-    </div>
   </div>
-  <h3 class="title">{{ title }}</h3>
+  <h3 class="title">{{ title }} <span class="capacity"><i class="fa fa-user"></i>{{ capacity }}</span></h3>
 </a>
